--- a/css/styles.css
+++ b/css/styles.css
@@ -5,24 +5,42 @@
   scroll-behavior: smooth;
 }
 
-.navbar-nav .nav-link {
-    font-family: Poppins;
-    font-size: 24px; 
-    font-weight: 400;
-    line-height: 36px; 
-    letter-spacing: 0;
-    color: #0C0C0F; 
-  }
+/* Scroll Bar */
 
-  .custom-container {
-    margin-top: 210px;
-    gap: 70px;
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
 }
 
-.custom-container > div {
-  height: 60px;
-  border-radius: 20px;
-  border: 4px solid rgba(38, 137, 164, 1);
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(66, 66, 66, 0.2);
+  border: 0px;
+  background-clip: padding-box;
+  border-radius: 5px;
+}
+
+.color-primary {
+  color: rgba(38, 137, 164, 1);
+}
+
+/* navigation */
+
+.navbar-nav .nav-link {
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0;
+  color: #0c0c0f;
+}
+
+.custom-container {
+  margin-top: 210px;
+  gap: 70px;
 }
 
 .element-img {
@@ -30,10 +48,36 @@
   width: 40px;
 }
 
+
 .box {
   width: 338px;
-  height: 438px;  
+  height: 438px;
   background: rgba(158, 153, 153, 0.22);
   border-radius: 55px;
   backdrop-filter: blur(40px);
+}
+
+.door-text {
+  font-size: 18px;
+  color: rgba(12, 12, 15, 1);
+  margin-left: 60px;
+  margin-top: 10px;
+}
+
+.custom {
+  width: 300px;
+  height: 80px;
+  border-radius: 55px;
+  backdrop-filter: blur(40px);  
+  border: 4px solid rgba(38, 137, 164, 1);
+  cursor: pointer;
+}
+
+.nav-pills .nav-link.active {
+  background-color: transparent !important;
+  border: none !important; 
+}
+
+.tab-button {
+  cursor: pointer;
 }
