--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,11 @@
   color: #0c0c0f;
 }
 
-.custom-container {
+.margin-top {
   margin-top: 210px;
+}
+
+.custom-container {
   gap: 70px;
 }
 
@@ -47,7 +50,6 @@
   height: 40px;
   width: 40px;
 }
-
 
 .box {
   width: 338px;
@@ -62,22 +64,68 @@
   color: rgba(12, 12, 15, 1);
   margin-left: 60px;
   margin-top: 10px;
+  text-decoration: none !important;
 }
 
 .custom {
   width: 300px;
   height: 80px;
   border-radius: 55px;
-  backdrop-filter: blur(40px);  
+  backdrop-filter: blur(40px);
   border: 4px solid rgba(38, 137, 164, 1);
   cursor: pointer;
 }
 
 .nav-pills .nav-link.active {
   background-color: transparent !important;
-  border: none !important; 
+  border: none !important;
 }
 
 .tab-button {
   cursor: pointer;
+}
+
+/* configurator */
+.item-config {
+  width: 368px;
+  height: 828px;
+  box-shadow: -11px 13px 16px 6px rgba(0, 0, 0, 0.25);
+}
+
+.item-config-p {
+  color: #2689A4;
+  font-size: 24px;
+  font-family: Poppins;
+  font-weight: 700;
+  word-wrap: break-word;
+}
+
+.item-config-img {
+  width: 96px;
+  height: 190px;
+}
+
+.custom-hr {
+  width: 100%;
+  background: #D9D9D9;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 19px;
+}
+
+.dropdown-toggle::after {
+  content: "";
+  display: inline-block;
+  width: 0.3em;
+  height: 0.3em;
+  margin-left: 0.25em;
+  vertical-align: middle;
+}
+
+.dropdown-menu {
+  margin-top: 0;
+  background-color: #D9D9D9;
+}
+
+.dropdown-arrow {
+  margin-left: 200px;
 }
