--- a/css/configProdusul.css
+++ b/css/configProdusul.css
@@ -1,95 +1,100 @@
 /* item config */
 .item-config {
-    width: 498px;
-    height: auto;
-    box-shadow: -11px 13px 16px 6px rgba(0, 0, 0, 0.25);
-  }
-  
-  .config-prod-h3 {
-    color: #2689A4;
-    font-size: 36px;
-    font-family: Poppins;
-    font-weight: 600;
-    line-height: 43.57px;
-  }
-  
-  .top-hr {
-   margin-top: 15px;
-   width: 100%;
-   height: 2px;
-   background: #D9D9D9;
-   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-   border-radius: 19px;
-  }
-  
-  .custom-hr {
-    margin: 0;
-    width: 100%;
-    height: 2px;
-    background: #D9D9D9;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 19px;
-  }
-  
-  .dropdown-button-product {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 55px;
-    color: #9E9999;
-    border: none;
-    background: none;
-    cursor: pointer;
-  }
-  
-  .dropdown-toggle::after {
-    content: "";
-    display: inline-block;
-    width: 0.3em;
-    height: 0.3em;
-    margin-left: 0.25em;
-    vertical-align: middle;
-  }
-  
-  .dropdown-menu {
-    margin-top: 0;
-    background-color: #D9D9D9;
-  }
-  
-  .dropdown-btn::after {
-    content: '-';
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .item-config-footer {
-    height: 200px;
-    margin-left: 20%;
-  }
+  width: 498px;
+  height: auto;
+  box-shadow: -11px 13px 16px 6px rgba(0, 0, 0, 0.25);
+}
 
-  .item-config-number {
-    width: 25%;
-    height: 40px;
-    background: #fff;
-    border-radius: 35px;
-    color: #0C0C0F;
-    border-color: #2689A4;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 30px;
-    margin: 0 8px;
-  }
+.config-prod-h3 {
+  color: #2689a4;
+  font-size: 36px;
+  font-family: Poppins;
+  font-weight: 600;
+  line-height: 43.57px;
+}
 
-  .button-config {
-    width: 32px;
-    height: 32px;
-    background: #fff;
-    color: #2689A4;
-    border: none;
-    font-weight: 300;
-    font-size: 55px;
-    line-height: 30px;
-  }
+.top-hr {
+  margin-top: 15px;
+  width: 100%;
+  height: 2px;
+  background: #d9d9d9;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 19px;
+}
+
+.custom-hr {
+  margin: 0;
+  width: 100%;
+  height: 2px;
+  background: #d9d9d9;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 19px;
+}
+
+.dropdown-button-product {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 55px;
+  color: #9e9999;
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+}
+
+.dropdown-menu {
+  margin-top: 0;
+  background-color: #d9d9d9;
+}
+
+.dropdown-menu .dropdown-item {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 55px;
+  color: #9e9999;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.dropdown-arrow {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid;
+  border-right: 2px solid;
+  transform: rotate(135deg);
+}
+
+.item-config-footer {
+  height: 200px;
+  margin-left: 20%;
+}
+
+.item-config-number {
+  width: 25%;
+  height: 40px;
+  background: #fff;
+  border-radius: 35px;
+  color: #0c0c0f;
+  border-color: #2689a4;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 30px;
+  margin: 0 8px;
+}
+
+.button-config {
+  width: 32px;
+  height: 32px;
+  background: #fff;
+  color: #2689a4;
+  border: none;
+  font-weight: 300;
+  font-size: 55px;
+  line-height: 30px;
+}
