--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,24 @@
   scroll-behavior: smooth;
 }
 
+body, html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.container.margin-top {
+  flex: 1 0 auto;
+  margin-top: 200px;
+}
+
+footer {
+  flex-shrink: 0;
+}
+
 /* Scroll Bar */
 
 ::-webkit-scrollbar-track {
@@ -27,23 +45,12 @@
   color: rgba(38, 137, 164, 1);
 }
 
-/* navigation */
-
-.navbar-nav .nav-link {
-  font-family: Poppins;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 36px;
-  letter-spacing: 0;
-  color: #0c0c0f;
-}
-
-.item-select {
-  margin-top: 210px;
-}
-
 .custom-container {
   gap: 70px;
+}
+
+.margin-top {
+  margin-top: 210px;
 }
 
 .element-img {
