--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,14 +1,26 @@
 /* navigation */
 
+.navbar {
+  --bs-navbar-padding-y: 0 !important;
+}
+
 .navbar-nav .nav-link {
-    font-family: Poppins;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0;
-    color: #0c0c0f;
-  }
-  
-  .bi-cart.active {
-    color: #2689A4;
-  }
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0;
+  color: #0c0c0f;
+}
+
+.bg-confg-btn.white-bg {
+  background: #ffffff;
+}
+
+.bg-confg-btn {
+  width: 132.8px;
+  height: 166px;
+  background: #2689a4;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
