--- a/css/navigation.css
+++ b/css/navigation.css
@@ -24,3 +24,64 @@
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+
+.menu-div {
+  display: none;
+}
+
+.right-menu {
+  background-color: #2689a4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.navbar-logo-right {
+  margin-top: 20%;
+}
+
+.right-header {
+  color: #fff;
+  max-width: 70vh;
+  font-size: 26px;
+  letter-spacing: -0.055em;
+  line-height: 1.38;
+  font-family: Poppins;
+  text-align: center;
+  font-family: "Open Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+}
+
+.left-menu {
+  background-color: #fff;
+}
+
+.navbar-logo-small {
+  margin-top: 10%;
+  margin-left: 15%;
+}
+
+.left-menu p a {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #005A87;
+  text-decoration: none;
+}
+
+@media (max-width: 820px) {
+  .right-menu {
+    display: none;
+  }
+
+  }
+  
+@media (max-width: 574px) {
+  .left-menu p a {
+  font-size: 17px;
+  line-height: 15px;
+  font-weight: 500;
+  }
+}
