--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 
 .container.margin-top {
   flex: 1 0 auto;
-  margin-top: 200px;
+  margin-top: 80px;
 }
 
 footer {
@@ -63,18 +63,18 @@ footer {
 }
 
 .box {
-  width: 338px;
+  max-width: 338px;
   height: 438px;
   background: rgba(158, 153, 153, 0.22);
   border-radius: 55px;
   backdrop-filter: blur(40px);
+  margin: none;
 }
 
 .door-text {
   font-size: 18px;
   color: rgba(12, 12, 15, 1);
-  margin-left: 60px;
-  margin-top: 10px;
+  margin: 10px 40px;
   text-decoration: none !important;
 }
 
@@ -100,4 +100,19 @@ footer {
 .configurator {
   margin-top: 180px;
   padding: 0 72px !important;
+}
+
+@media screen and (max-width: 992px) {
+  .custom {
+    width: 200px;
+    height: 100px;
+    border-radius: 55px;
+    margin: 10px;
+  }
+}
+
+  @media screen and (min-width: 992px) {
+    .custom {
+      margin: 10px;
+    }
 }
