configurator page responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
   scroll-behavior: smooth;
 }
 
-body, html {
+body,
+html {
   height: 100%;
 }
 
@@ -96,10 +97,19 @@ footer {
   cursor: pointer;
 }
 
-/* configurator */
-.configurator {
-  margin-top: 180px;
-  padding: 0 72px !important;
+@media (min-width: 533px) {
+  .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-right: auto;
+    margin-left: auto; 
+  }
+}
+
+@media (max-width: 992px) {
+  .item-config {
+    margin-top: 50px;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -111,8 +121,11 @@ footer {
   }
 }
 
-  @media screen and (min-width: 992px) {
-    .custom {
-      margin: 10px;
-    }
+@media screen and (min-width: 992px) {
+  .custom {
+    margin: 10px;
+  }
+  .item-config {
+    align-self: start;
+  }
 }
