--- a/css/configProdusul.css
+++ b/css/configProdusul.css
@@ -1,8 +1,13 @@
 /* item config */
 .item-config {
-  width: 498px;
+  max-width: 498px;
   height: auto;
   box-shadow: -11px 13px 16px 6px rgba(0, 0, 0, 0.25);
+  margin: 0 auto;
+}
+
+.cfg-fixed-small {
+  width: 498px;
 }
 
 .config-prod-h3 {
@@ -10,10 +15,11 @@
   font-size: 36px;
   font-family: Poppins;
   font-weight: 600;
-  line-height: 43.57px;
+  line-height: 1.2;
 }
 
-.top-hr {
+.top-hr,
+.custom-hr {
   margin-top: 15px;
   width: 100%;
   height: 2px;
@@ -22,13 +28,16 @@
   border-radius: 19px;
 }
 
-.custom-hr {
-  margin: 0;
-  width: 100%;
-  height: 2px;
-  background: #d9d9d9;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-  border-radius: 19px;
+.dropdown-button-product,
+.dropdown-menu .dropdown-item {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 1em;
+  line-height: 2.5;
+  color: #9e9999;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 .dropdown-button-product {
@@ -42,22 +51,6 @@
   cursor: pointer;
   position: relative;
   width: 100%;
-}
-
-.dropdown-menu {
-  margin-top: 0;
-  background-color: #d9d9d9;
-}
-
-.dropdown-menu .dropdown-item {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 55px;
-  color: #9e9999;
-  border: none;
-  background: none;
-  cursor: pointer;
 }
 
 .dropdown-arrow {
@@ -94,7 +87,13 @@
   background: #fff;
   color: #2689a4;
   border: none;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 55px;
   line-height: 30px;
+}
+
+@media (max-width: 991px) {
+  .item-config {
+    margin-bottom: 50px;
+  }
 }
