--- a/css/navigation.css
+++ b/css/navigation.css
@@ -25,7 +25,6 @@
   border-bottom-right-radius: 20px;
 }
 
-
 .menu-div {
   display: none;
 }
@@ -34,8 +33,15 @@
   background-color: #2689a4;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+}
+
+.align-self-end {
+  align-self: flex-end;
+}
+
+.menu-btn-white {
+  color: #fff;
 }
 
 .navbar-logo-right {
@@ -50,7 +56,9 @@
   line-height: 1.38;
   font-family: Poppins;
   text-align: center;
-  font-family: "Open Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  font-family: "Open Sans", ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif;
 }
 
 .left-menu {
@@ -63,25 +71,44 @@
 }
 
 .left-menu p a {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
-  color: #005A87;
+  color: #005a87;
   text-decoration: none;
+}
+
+button.navbar-toggler {
+  border: none;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-toggler.my-override {
+      display: block !important;
+  }
+}
+
+
+@media (min-width: 821px) {
+  .small-screen-nav-show {
+    display: none;
+  }
 }
 
 @media (max-width: 820px) {
   .right-menu {
     display: none;
   }
-
+  .small-screen-nav-show-blue {
+    display: none;
   }
-  
+}
+
 @media (max-width: 574px) {
   .left-menu p a {
-  font-size: 17px;
-  line-height: 15px;
-  font-weight: 500;
+    font-size: 17px;
+    line-height: 15px;
+    font-weight: 500;
   }
 }
