--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ footer {
 /* Footer Styles */
 footer {
   background-color: #005A87;
-  width: calc(100% - 40px);
+  width: 100%;
   height: 400px;
   margin: 0 auto;
   color: #fff;
