--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,87 @@
-.hero-title {
-    font-size: 2.5rem;
-    letter-spacing: -0.055em;
-    font-weight: 500;
-    color: #ffff;
+.main-heading {
+  font-size: 2.5rem;
+  letter-spacing: -0.055em;
+  font-weight: 500;
+  color: #ffff;
+  margin: 0;
+  text-align: center;
 }
 
-.custom-max-width {
-    max-width: 1050px;
-    width: 100%;
+/* poligon */
+.poligon {
+  width: 330px;
+  height: 100px;
+  background: #ffffff;
+  clip-path: polygon(100% 100%, 4.5% 100%, 0 50%, 4.5% 0, 100% 0, 95.5% 50%);
+  border-bottom: 4px solid #2689A4;
 }
 
+.heroh5 {
+  font-size: 1.2rem;
+  line-height: 1;
+  margin: 0 0 5px;
+  letter-spacing: -0.025em;
+}
 
-@media (max-width: 767px) {
-    .hero-title {
-        font-size: 1.5rem;
+.heroP {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #a8a8a8;
+  line-height: 1.2;
+  font-weight: 600;
+  letter-spacing: -0.025em;
+}
+
+/* arrow */
+.arrow-container {
+    background-color: rgba(172, 172, 172, 0.14);
+}
+
+.oval-container {
+    width: 50px;
+    height: 40px;
+    border-radius: 20%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #2689A4;
+    margin: 0 auto;
+}
+
+/* About */
+
+.title {
+    color: #2689A4;
+    font-weight: bold;
+    font-size: 2.6rem;
+    letter-spacing: -0.025em;
+}
+
+.abouSection {
+    background-color: rgba(172, 172, 172, 0.14);
+    max-height: 500px;
+    padding: auto;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .abouth1 {
+    color: rgba(241, 240, 240, 0.14);
+  }
+  
+  @media (max-width: 767px) {
+    .main-heading {
+      font-size: 1.5rem;
     }
-}
-
-
-@media (max-width: 400px) {
-    .hero-title {
-        font-size: 0.5rem;
+  }
+  
+  @media (max-width: 400px) {
+    .main-heading {
+      font-size: 0.5rem;
     }
-}
+  }
+  
