--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
   height: 100px;
   background: #ffffff;
   clip-path: polygon(100% 100%, 4.5% 100%, 0 50%, 4.5% 0, 100% 0, 95.5% 50%);
-  border-bottom: 4px solid #2689A4;
+  border-bottom: 4px solid #2689a4;
 }
 
 .heroh5 {
@@ -33,55 +33,63 @@
 }
 
 /* arrow */
-.arrow-container {
-    background-color: rgba(172, 172, 172, 0.14);
-}
 
 .oval-container {
-    width: 50px;
-    height: 40px;
-    border-radius: 20%;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #2689A4;
-    margin: 0 auto;
+  width: 50px;
+  height: 40px;
+  border-radius: 20%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #2689a4;
+  margin: 0 auto;
 }
 
 /* About */
 
 .title {
-    color: #2689A4;
-    font-weight: bold;
-    font-size: 2.6rem;
-    letter-spacing: -0.025em;
+  text-align: center;
+  color: #2689a4;
+  font-weight: bold;
+  font-size: 2.6rem;
+  letter-spacing: -0.025em;
 }
 
-.abouSection {
-    background-color: rgba(172, 172, 172, 0.14);
-    max-height: 500px;
-    padding: auto;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+.bgColor {
+  background-color: rgba(172, 172, 172, 0.14);
+}
 
-  .abouth1 {
-    color: rgba(241, 240, 240, 0.14);
+.abouth1 {
+  color: rgba(241, 240, 240, 0.14);
+  margin-bottom: 0;
+}
+
+.aboutLeft {
+    width: 100%;
+    margin-right: 100px;
+}
+
+.aboutSubtitle {
+    font-size: 3.5rem;
+    color: #005A87;
+    font-weight: bold;
+    letter-spacing: -0.025em;
+    margin-bottom: 10px;
+}
+
+.aboutImage {
+  width: 1400px;
+}
+
+@media (max-width: 767px) {
+  .main-heading {
+    font-size: 1.5rem;
   }
-  
-  @media (max-width: 767px) {
-    .main-heading {
-      font-size: 1.5rem;
-    }
+}
+
+@media (max-width: 400px) {
+  .main-heading {
+    font-size: 0.5rem;
   }
-  
-  @media (max-width: 400px) {
-    .main-heading {
-      font-size: 0.5rem;
-    }
-  }
-  
+}
