--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,10 @@
   width: 1400px;
 }
 
+.about-container {
+  min-height: 720px;
+}
+
 @media (max-width: 767px) {
   .main-heading {
     font-size: 1.5rem;
