--- a/css/values.css
+++ b/css/values.css
@@ -5,14 +5,17 @@
     background-color: #353535;
     display: flex;
     align-items: center;
-    min-height: 100vh;
+    min-height: 110vh;
     font-family: 'Young Serif', serif;
+    padding: 60px 0;
 }
 
 .p-center-values {
     text-align: center;
     color: #fff;
     font-weight: bold;
+    width: 70%;
+    margin: auto;
     font-size: 1.4rem;
     letter-spacing: -0.025em;
   }
