--- a/css/contact.css
+++ b/css/contact.css
@@ -3,14 +3,13 @@
     font-size: 0.8rem;
     font-weight: 600;
     letter-spacing: 0.125em;
-    color: #a8a8a8;
+    color: #fff;
     text-align: center;
     margin-bottom: 50px;
   }
 
 .contact {
-    background-color: #f5f5f5;
-    padding: 10rem 0;
+    background-color: #353535;
 }
 
 .contact .left {
@@ -20,7 +19,7 @@
 .contact label {
     font-size: 1.4rem;
     cursor: auto;
-    color: #000; 
+    color: #fff; 
 }
 
 .contact input,
