--- a/css/production.css
+++ b/css/production.css
@@ -1,53 +1,102 @@
-.production-head { 
-    min-height: 320px;
+.production-head {
+  min-height: 580px;
+}
+
+.prod-img-container {
+  position: relative;
+}
+
+.prod-img-h {
+  width: 100%;
+  height: auto;
+}
+
+.h1-prod-h {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 3.5rem;
+}
+
+.logo-prod {
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  transform: translate(50%, -50%);
 }
 
 .p-center-production {
-    text-align: center;
-    width: 50%;
-    margin: auto;
-    font-size: 1.05rem;
-    letter-spacing: -0.025em;
-    margin-bottom: 100px;
-    font-family: 'Young Serif', serif;
-  }
+  text-align: center;
+  width: 50%;
+  margin: auto;
+  font-size: 1.1rem;
+  letter-spacing: -0.015em;
+  margin-bottom: 100px;
+  font-family: "Young Serif", serif;
+}
 
 .production-container {
-    min-height: 620px;
-  }
+  min-height: 620px;
+}
 
-  .margin-bottom {
-    margin-bottom: 100px;
-  }
+.margin-bottom {
+  margin-bottom: 100px;
+}
 
 .production-p {
-    color: rgba(241, 240, 240, 0.14);
-    margin-bottom: 0;
-    letter-spacing: -0.025em;
-    line-height: 25px;
-    font-size: 1rem;
-  }
-  
-  .production-left {
-      width: 100%;
-      margin-right: 100px;
-  }
+  color: rgba(241, 240, 240, 0.14);
+  margin-bottom: 0;
+  letter-spacing: -0.025em;
+  line-height: 25px;
+  font-size: 1rem;
+}
 
-  .production-right {
-    width: 100%;
-    margin-left: 100px;
-  }
-  
-  .production-subtitle {
-      font-size: 2.3rem;
-      color: #005A87;
-      font-weight: bold;
-      letter-spacing: -0.025em;
-      margin-bottom: 10px;
-      line-height: 33px;
-  }
-  
-  .production-image {
-    width: 1400px;
-  }
-  
+.production-left {
+  width: 100%;
+  margin-right: 100px;
+}
+
+.production-right {
+  width: 100%;
+  margin-left: 100px;
+}
+
+.production-mid {
+  min-height: 480px;
+}
+
+.prod-img-m {
+  width: 100%;
+  height: auto;
+}
+
+.h1-prod-m {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+.production-subtitle {
+  font-size: 2.3rem;
+  color: #005a87;
+  font-weight: bold;
+  letter-spacing: -0.025em;
+  margin-bottom: 10px;
+  line-height: 33px;
+}
+
+.production-image {
+  width: 1400px;
+}
+
+.prod-contact-container {
+  min-height: 280px;
+  width: 50%;
+  margin: auto;
+}
