--- a/css/pvcAluminium.css
+++ b/css/pvcAluminium.css
@@ -55,7 +55,22 @@
     color: #fff;
     font-weight: bold;
     font: 1em sans-serif;
-    bottom: 5%;
+    bottom: 7%;
+    left: 50%;
+  }
+
+  .category-image-text-aluminiu {
+    color: #fff;
+    font-weight: bold;
+    font: 1em sans-serif;
+    bottom: 25%;
+    left: 50%;
+  }
+
+  .category-image-sub-text-aluminiu {
+    color: #fff;
+    font: 1em sans-serif;
+    bottom: 1%;
     left: 50%;
   }
 
