--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,11 @@ div.footer-titles p {
 div.footer-titles a {
   text-decoration: none;
   color: #fff;
+  transition: text-shadow 0.3s ease;
+}
+/* glow effect on hover */
+div.footer-titles a:hover {
+  text-shadow: rgba(255, 255, 255, 0.8) 0 0 10px;
 }
 
 @media (min-width: 533px) {
