--- a/css/styles.css
+++ b/css/styles.css
@@ -187,3 +187,14 @@ div.footer-titles a:hover {
   display: block;
   margin-top: 10px;
 }
+
+/* GDPR */
+.gdpr-first-p {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.blue-head {
+  height: 300px;
+  background-color: #005A87;
+}
