--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@
   letter-spacing: -0.025em;
 }
 
-/* Hide section at screen width less than 999px */
+/* Hide the poligon at screen width less than 999px */
 @media (max-width: 999px) {
   .div-relative {
     display: none;
@@ -84,7 +84,6 @@
 }
 
 /* About */
-
 .title {
   text-align: center;
   color: #2689a4;
@@ -104,7 +103,6 @@
 
 .aboutLeft {
     width: 100%;
-    margin-right: 100px;
 }
 
 .aboutSubtitle {
@@ -116,11 +114,41 @@
 }
 
 .aboutImage {
-  width: 1400px;
+  width: 100%;
 }
 
 .about-container {
   min-height: 720px;
+  height: 720px;
+}
+
+@media (max-width: 999px) {
+  .aboutSubtitle {
+    font-size: 2.5rem;
+    color: #005A87;
+    font-weight: bold;
+    letter-spacing: -0.025em;
+    margin-bottom: 10px;
+    text-align: center;
+    margin-top: 60px;
+  }
+
+  .aboutLeft {
+    order: 2;
+  }
+
+  .aboutImage {
+    order: 1;
+  }
+
+  .text-center {
+    width: 100%;
+  }
+
+  .about-container {
+    min-height: 1000px;
+    height: 2000px;
+  }
 }
 
 /* liniiDeProduse */
