--- a/css/values.css
+++ b/css/values.css
@@ -142,4 +142,18 @@
   .fa-plane {
     font-size: 16px;
   }
+
+  .card-values-container {
+    display: flex;
+    gap: 50px;
+  }
   
+
+  @media (max-width: 991px) {
+    .values-container {
+      min-height: 1800px;
+    }
+    .card-values-container.flex-column-values {
+      flex-direction: column;
+    }
+  }
