--- a/css/contact.css
+++ b/css/contact.css
@@ -1,74 +1,95 @@
 .contact-title {
-    text-align: center;
-    color: #2689a4;
-    font-weight: bold;
-    font-size: 2.6rem;
-    letter-spacing: -0.025em;
-  }
+  text-align: center;
+  color: #2689a4;
+  font-weight: bold;
+  font-size: 2.6rem;
+  letter-spacing: -0.025em;
+}
 
 .contact-p {
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    font-weight: 600;
-    letter-spacing: 0.125em;
-    color: #fff;
-    text-align: center;
-    margin-bottom: 50px;
-  }
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 0.125em;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 50px;
+}
 
 .contact {
-    background-color: #353535;
+  background-color: #353535;
 }
 
 .contact .left {
-    margin-bottom: 7rem;
+  margin-bottom: 1rem;
+}
+
+.contact-button-div {
+  margin-bottom: 7rem;
 }
 
 .contact label {
-    font-size: 1.4rem;
-    cursor: auto;
-    color: #fff; 
+  font-size: 1.4rem;
+  cursor: auto;
+  color: #fff;
 }
 
 .contact input,
 .contact textarea {
-    font-size: 1.4rem;
-    padding: 1rem;
-    background-color: #fff; 
-    border: 1px solid #d3d3d3; 
+  font-size: 1.4rem;
+  padding: 1rem;
+  background-color: #fff;
+  border: 1px solid #d3d3d3;
 }
 
 .contact textarea {
-    resize: none;
-    height: 20rem;
+  resize: none;
+  height: 20rem;
 }
 
 .contact .map {
-    height: 20rem;
+  height: 20rem;
 }
 
 .contact .map iframe {
-    height: 100%;
+  height: 100%;
 }
 
 .main-btn {
-    background-color: #2689a4;
-    transition: all 0.3s;
-    font-size: 1.5rem;
-    padding: 1.2rem 3rem;
-    border-radius: 0.5rem;
-    display: block;
-    width: fit-content;
-    color: #fff;
-    text-decoration: none;
+  background-color: #2689a4;
+  transition: all 0.3s;
+  font-size: 1.5rem;
+  padding: 1.2rem 3rem;
+  border-radius: 0.5rem;
+  display: block;
+  width: fit-content;
+  color: #fff;
+  text-decoration: none;
+}
+
+@media (max-width: 575px) {
+  .contact input,
+  .contact textarea {
+    font-size: 1rem;
+    padding: 0.5rem;
   }
 
-  @media (max-width: 290px) {
-    .contact-title {
-      font-size: 1.5rem;
+  .contact label {
+    font-size: 1.2rem;
+    cursor: auto;
+    color: #fff;
+}
+    .contact-button {
+    font-size: 1.2rem;
     }
+}
 
-    .contact-p {
-        font-size: 0.7rem;
-        }
+@media (max-width: 290px) {
+  .contact-title {
+    font-size: 1.5rem;
+  }
+
+  .contact-p {
+    font-size: 0.7rem;
+  }
 }
