--- a/css/production.css
+++ b/css/production.css
@@ -25,11 +25,13 @@
   top: 50%;
   right: 20%;
   transform: translate(50%, -50%);
+  max-width: 100%;
+  max-height: 100px;
 }
 
 .p-center-production {
   text-align: center;
-  width: 50%;
+  width: 80%;
   margin: auto;
   font-size: 1.1rem;
   letter-spacing: -0.015em;
@@ -38,7 +40,16 @@
 }
 
 .production-container {
-  min-height: 620px;
+  min-height: 720px;
+  height: 720px;
+}
+
+.glass-production-container {
+  min-height: auto;
+}
+
+.lines-production-container {
+  min-height: auto;
 }
 
 .margin-bottom {
@@ -64,7 +75,7 @@
 }
 
 .production-mid {
-  min-height: 480px;
+  min-height: auto;
 }
 
 .prod-img-m {
@@ -89,6 +100,7 @@
   letter-spacing: -0.025em;
   margin-bottom: 10px;
   line-height: 33px;
+  text-align: center;
 }
 
 .production-image {
@@ -96,7 +108,137 @@
 }
 
 .prod-contact-container {
-  min-height: 380px;
+  min-height: auto;
   width: 50%;
   margin: auto;
+}
+
+
+@media (max-width: 999px) {
+  .production-container {
+    min-height: auto;
+  }
+
+  .production-head {
+    min-height: auto;
+  }
+
+  .logo-prod {
+    min-height: 100px;
+  }
+
+  .h1-prod-h {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .production-subtitle {
+    margin: 20px 0;
+}
+}
+
+@media (max-width: 689px) {
+  .prod-contact-container {
+    width: 80%;
+  }
+}
+
+@media (max-width: 632px) {
+  .h1-prod-m {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 567px) {
+  .h1-prod-m {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .logo-prod {
+    max-width: 150px!important;
+  }
+
+  .h1-prod-h {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 437px) {
+  .h1-prod-m {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 387px) {
+  .logo-prod {
+    max-width: 100px!important;
+  }
+
+  .h1-prod-h {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 387px) {
+  .lab-test-container {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 364px) {
+  .lab-test-container {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 345px) {
+  .h1-prod-m {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 310px) {
+  .lines-production-container {
+    min-height: 1020px;
+    height: 720px;
+  }  
+}
+
+@media (max-width: 307px) {
+  .lab-test-container {
+    min-height: auto;
+  }
+}
+
+
+@media (max-width: 292px) {
+  .glass-production-container {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 283px) {
+  .lines-production-container {
+    min-height: 1120px;
+    height: 720px;
+  }  
+}
+
+@media (max-width: 267px) {
+  .h1-prod-m {
+    font-size: 0.6rem;
+  }
+
+  .lab-test-container {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 240px) {
+  .lab-test-container {
+    min-height: auto;
+  }
 }
