--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@
 .title {
   text-align: center;
   color: #2689a4;
-  font-weight: bold;
+  font-weight: bold !important;
   font-size: 2.6rem;
   letter-spacing: -0.025em;
 }
