--- a/css/productLines.css
+++ b/css/productLines.css
@@ -10,7 +10,7 @@
 }
 
 .product-lines-container1 {
-  min-height: 620px;
+  min-height: auto;
 }
 
 .product-lines-container2 {
@@ -78,9 +78,105 @@
     vertical-align: -0.125em;
 }
 
-@media (max-width: 480px) {
-  .lines-image-text {
-    font-size: 1.5em;
+@media (max-width: 1200px) {
+  .blue-square-first {
+    left: 30%;
+    top: 120%;
+    height: auto;
+  }
+
+  .product-lines-container1 {
+    min-height: 600px;
+  }
+
+  .blue-square-second {
+    left: 30%;
+    top: 120%;
+    height: auto;
+  }
+
+  .product-lines-container2 {
+    min-height: 600px;
+  }
+}
+
+@media (max-width: 991px) {
+  .pl-first-cont img {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  .blue-square-first {
+    left: 30%;
+    top: 120%;
+    height: auto;
+    width: 40%;
+  }
+
+  .product-lines-container1 {
+    min-height: 600px;
+  }
+
+  .pl-second-cont img {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  .blue-square-second {
+    left: 30%;
+    top: 120%;
+    height: auto;
+    width: 40%;
+  }
+
+  .product-lines-container2 {
+    min-height: 600px;
+  }
+}
+
+@media (max-width: 768px) {
+  .blue-square-first {
+    left: 26.5%;
+    top: 150%;
+    width: 50%;
+  }
+
+  .product-lines-container1 {
+    min-height: 600px;
+  }
+
+  .blue-square-second {
+    left: 26.5%;
+    top: 150%;
+    width: 50%;
+  }
+
+  .product-lines-container2 {
+    min-height: 600px;
+  }
+}
+
+@media (max-width: 543px) {
+  .blue-square-first {
+    left: 11%;
+    top: 120%;
+    width: 80%;
+  }
+
+  .product-lines-container1 {
+    min-height: 400px;
+  }
+
+  .blue-square-second {
+    left: 11%;
+    top: 120%;
+    width: 80%;
+  }
+
+  .product-lines-container2 {
+    min-height: 450px;
   }
 }
 
@@ -89,3 +185,45 @@
     font-size: 1em;
   }
 }
+
+@media (max-width: 480px) {
+  .lines-image-text {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 434px) {
+  .blue-square-first {
+    display: block;
+    bottom:0;
+  }
+
+  .product-lines-container1 {
+    min-height: 600px;
+  }
+
+  .pl-center-text {
+    background-color: #005a87;
+}
+
+  .h1-pl {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+  .p-pl {
+    color: #fff;
+    font-weight: 600;
+  }
+
+  .blue-square-second {
+    display: block;
+    bottom:0;
+  }
+
+  .product-lines-container2 {
+    min-height: 600px;
+  }
+}
+
