--- a/css/styles.css
+++ b/css/styles.css
@@ -211,3 +211,58 @@ div.footer-titles a:hover {
   height: 300px;
   background-color: #005A87;
 }
+
+/* Installers */
+
+.inst-img-m {
+  width: 100%;
+  height: auto;
+}
+
+.h1-inst-m {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+@media (max-width: 702px) {
+  .inst-img-m {
+    width: 100%;
+    min-height: 150px;
+  }
+}
+
+@media (max-width: 632px) {
+  .h1-inst-m {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 567px) {
+  .h1-inst-m {
+    font-size: 1.3rem;
+    width: 90%;
+  }
+}
+
+@media (max-width: 437px) {
+  .h1-inst-m {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 345px) {
+  .h1-inst-m {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 267px) {
+  .h1-inst-m {
+    font-size: 0.6rem;
+  }
+}
